<resources>
    <string name="app_name">Dashboard Updater</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dashboard_updater">DASHBOARD UPDATER</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_pending">No pending or in progress units at \nthe momment. You time-in one by\n tapping the + below.</string>
    <string name="notice">Notice</string>
    <string name="plus">Plus</string>
    <string name="home">HOME</string>
    <string name="chassis_number">CHASSIS NUMBER</string>
    <string name="close">CLOSE</string>
    <string name="takt_time">TAKT TIME</string>
    <string name="mo">MO</string>
    <string name="mo_date">MO DATE</string>
    <string name="dealer">DEALER</string>
    <string name="customer">CUSTOMER</string>
    <string name="chassis_model">CHASSIS MODEL</string>
    <string name="quantity">QUANTITY</string>
    <string name="view_attachments">VIEW ATTACHMENTS</string>
    <string name="time_in">TIME IN</string>
    <string name="material_call">MATERIAL CALL</string>
    <string name="remarks">REMARKS</string>
    <string name="set_as_pending">SET AS PENDING</string>
    <string name="submit">SUBMIT</string>
    <string name="youre_about_to_time_in">You\'re about to time-in a unit that\nhas already timed-out. Please\nreview the MO and choose one of\nthe actions below:</string>
    <string name="review_mo">REVIEW MO</string>
    <string name="time_in_as_spec_change">TIME IN AS SPEC CHANGE</string>
    <string name="time_in_as_back_job">TIME IN AS BACK JOB</string>
    <string name="options">Options:</string>
    <string name="time_out">TIME OUT</string>
    <string name="unit_has_been">Unit has been successfully\ntimed-out.</string>
    <string name="please_wait">PLEASE WAIT</string>
    <string name="please_wait_loading">PLEASE WAIT LOADING...</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="internet_error_title">Connection Error</string>
    <string name="internet_error">Can\'t connect to server.\nPlease check wifi/internet connection.</string>
    <string name="api_error">\nPlease contact administrator.</string>
    <string name="success_time_in">Unit has been Timed-In</string>
    <string name="success_time_out">Unit has been Timed-Out</string>
    <string name="success_material_call">Flagged as material call</string>
    <string name="success_pending">Flagged as pending</string>
    <string name="success_resolve">Unit has been Resolved</string>
    <string name="success_spec_change">Flagged as Spec-change</string>
    <string name="success_back_job">Flagged as back job</string>
</resources>
